# advent_of_code

./: LICENSE  README.md
2023/day10/: day10_part_1.ipynb
2023/day11/: day11.ipynb  day11_part_1.ipynb
2023/day12/: day12_part_1.ipynb
2023/day3/: my_code
2023/day6/: day6_part1.py
2023/day7/: day7_part_1.ipynb
2023/day8/: day8.ipynb  day8_part_1.ipynb
2023/day9/: day9.ipynb
2025/: .gitignore  README.md  pyproject.toml  requirements.txt  solve_day_01.py  solve_day_02.py  solve_day_03.py  solve_day_04.py  solve_day_05.py  solve_day_06.py  solve_day_07.py  solve_day_08.py  solve_day_09.py  solve_day_10.py  solve_day_11.py  solve_day_12.py  solve_day_13.py  solve_day_14.py  solve_day_15.py  solve_day_16.py  solve_day_17.py  solve_day_18.py  solve_day_19.py  solve_day_20.py  solve_day_21.py  solve_day_22.py  solve_day_23.py  solve_day_24.py  solve_day_25.py
2025/.devcontainer/: Dockerfile  devcontainer.json
2025/notebooks/: day_01.ipynb  day_02.ipynb  day_03.ipynb  day_04.ipynb  day_05.ipynb  day_06.ipynb  day_07.ipynb  day_08.ipynb  day_09.ipynb  day_10.ipynb  day_11.ipynb  day_12.ipynb  day_13.ipynb  day_14.ipynb  day_15.ipynb  day_16.ipynb  day_17.ipynb  day_18.ipynb  day_19.ipynb  day_20.ipynb  day_21.ipynb  day_22.ipynb  day_23.ipynb  day_24.ipynb  day_25.ipynb
2025/utils/: inputs.py
day10/: day10.ipynb
day11/: day11.ipynb
day12/: day12.ipynb
day3/: day3.ipynb  github_code
day5/: adventofcode.com_2023_day_5_input.txt  day5.ipynb  day5_part_2.ipynb
day6/: day6_part2.py
day7/: day7.ipynb  day7_part_2.ipynb
day9/: day9.ipynb
(+3 files in other folders)
